Margin on mobile / fixed hamburger menu

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -168,14 +168,20 @@ li {
     .heroMobile {
         display: block;
         padding-bottom: 10px;
+        margin-right: 15px;
+        margin-left: 15px;
     }
     .catMobile {
         display: block;
         padding-bottom: 10px;
+        margin-right: 15px;
+        margin-left: 15px;
     }
     .lifeMobile {
         display: block;
         padding-bottom: 10px;
+        margin-right: 15px;
+        margin-left: 15px;
     }
     #womenmobile {
         padding-bottom: 10px;
@@ -206,4 +212,5 @@ li {
 
 .navbar-toggler-icon {
     background-image: url(../images/mobilemenu.svg) !important;
+
 }
